force-app/main/default/objects/UUID_Tracker__c/UUID_Tracker__c.object-meta.xml
<CustomObject>
    <label>UUID Tracker</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>UUID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UUID Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>