force-app/main/default/objects/UUID_Tracker__c/fields/Action_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Action_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Parameter</label>
    <referenceTo>Action_Parameter__c</referenceTo>
    <relationshipLabel>UUID Trackers</relationshipLabel>
    <relationshipName>UUID_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>