force-app/main/default/objects/UUID_Tracker__c/fields/Action_Params__c.field-meta.xml
<CustomField>
    <fullName>Action_Params__c</fullName>
    <label>Action Params</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>