force-app/main/default/objects/UUID_Tracker__c/fields/No_Of_Clicks__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Clicks__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No Of Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>