force-app/main/default/objects/UUID_Tracker__c/fields/UUID_Link__c.field-meta.xml
<CustomField>
    <fullName>UUID_Link__c</fullName>
    <label>UUID Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>