force-app/main/default/objects/UUID_Tracker__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <description>Id of the parent record.</description>
    <label>WhatId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>